--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -5,7 +5,7 @@
 add_subdirectory(cpp)
 add_subdirectory(c)
 
-openvino_developer_export_targets(COMPONENT samples TARGETS format_reader ie_samples_utils)
+ov_developer_package_export_targets(format_reader ie_samples_utils)
 
 #
 # Install
