--- a/src/common/offline_transformations/CMakeLists.txt
+++ b/src/common/offline_transformations/CMakeLists.txt
@@ -35,7 +35,7 @@ ov_add_clang_format_target(${TARGET_NAME}_clang FOR_TARGETS ${TARGET_NAME})
 
 # install & export
 
-openvino_developer_export_targets(COMPONENT core TARGETS ${TARGET_NAME})
+ov_developer_package_export_targets(${TARGET_NAME})
 
 install(DIRECTORY "${PUBLIC_HEADERS_DIR}/"
         DESTINATION developer_package/include/openvino_offline_transformations
