--- a/src/plugins/template/backend/CMakeLists.txt
+++ b/src/plugins/template/backend/CMakeLists.txt
@@ -42,8 +42,7 @@ target_compile_definitions(${TARGET_NAME}
 target_link_libraries(${TARGET_NAME} PRIVATE openvino::builders openvino::reference openvino::util openvino::runtime::dev openvino::shape_inference)
 
 target_include_directories(${TARGET_NAME} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-                                                 $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/ops/>
-                                                 $<INSTALL_INTERFACE:developer_package/include/openvino_interpreter>)
+                                                 $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/ops/>)
 
 file(GLOB_RECURSE all_backends_src "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")
 ov_add_clang_format_target(${TARGET_NAME}_clang FOR_SOURCES ${all_backends_src})
@@ -52,10 +51,10 @@ ov_add_clang_format_target(${TARGET_NAME}_clang FOR_SOURCES ${all_backends_src})
 
 ov_install_static_lib(${TARGET_NAME} ${OV_CPACK_COMP_CORE})
 
-ov_developer_package_export_targets(${TARGET_NAME})
+ov_developer_package_export_targets(TARGET ${TARGET_NAME})
 
 install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/"
-        DESTINATION developer_package/include/openvino_interpreter
+        DESTINATION developer_package/include/${TARGET_NAME}
         COMPONENT developer_package EXCLUDE_FROM_ALL
         FILES_MATCHING
             PATTERN "*.hpp"
