--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -5,7 +5,8 @@
 add_subdirectory(cpp)
 add_subdirectory(c)
 
-ov_developer_package_export_targets(format_reader ie_samples_utils)
+ov_developer_package_export_targets(TARGET format_reader)
+ov_developer_package_export_targets(TARGET ie_samples_utils)
 
 #
 # Install
