--- a/src/core/builder/CMakeLists.txt
+++ b/src/core/builder/CMakeLists.txt
@@ -27,8 +27,7 @@ ov_build_target_faster(${TARGET_NAME}
 
 target_include_directories(${TARGET_NAME} PUBLIC
     $<BUILD_INTERFACE:${BUILDER_INCLUDE_DIR}>
-    $<BUILD_INTERFACE:${OV_CORE_INCLUDE_PATH}>
-    $<INSTALL_INTERFACE:developer_package/include/openvino_builders>)
+    $<BUILD_INTERFACE:${OV_CORE_INCLUDE_PATH}>)
 
 if(NOT BUILD_SHARED_LIBS)
     target_compile_definitions(${TARGET_NAME} PUBLIC OPENVINO_STATIC_LIBRARY)
@@ -40,8 +39,5 @@ ov_add_clang_format_target(${TARGET_NAME}_clang FOR_TARGETS ${TARGET_NAME})
 
 ov_install_static_lib(openvino_builders ${OV_CPACK_COMP_CORE})
 
-ov_developer_package_export_targets(openvino::builders)
-
-install(DIRECTORY "${BUILDER_INCLUDE_DIR}/"
-        DESTINATION developer_package/include/openvino_builders
-        COMPONENT developer_package EXCLUDE_FROM_ALL)
+ov_developer_package_export_targets(TARGET openvino::builders
+                                    INSTALL_INCLUDE_DIRECTORIES "${BUILDER_INCLUDE_DIR}/")
