--- a/src/tests/ov_helpers/ov_models/CMakeLists.txt
+++ b/src/tests/ov_helpers/ov_models/CMakeLists.txt
@@ -13,7 +13,6 @@ ov_add_target(
         INCLUDES
             PUBLIC
                 "$<BUILD_INTERFACE:${PUBLIC_HEADERS_DIR}>"
-                "$<INSTALL_INTERFACE:developer_package/include/ov_models>"
         ADDITIONAL_SOURCE_DIRS
             ${CMAKE_CURRENT_SOURCE_DIR}/src
         LINK_LIBRARIES
@@ -24,8 +23,6 @@ ov_add_target(
                 openvino::runtime::dev
                 common_test_utils
         ADD_CLANG_FORMAT
-        DEVELOPER_PACKAGE
-            tests
 )
 
 ov_build_target_faster(${TARGET_NAME}
@@ -33,8 +30,7 @@ ov_build_target_faster(${TARGET_NAME}
     PCH PRIVATE "src/precomp.hpp"
 )
 
-# install
+# install & export
 
-install(DIRECTORY "${PUBLIC_HEADERS_DIR}/"
-        DESTINATION developer_package/include/ov_models
-        COMPONENT developer_package EXCLUDE_FROM_ALL)
+ov_developer_package_export_targets(TARGET ${TARGET_NAME}
+                                    INSTALL_INCLUDE_DIRECTORIES "${PUBLIC_HEADERS_DIR}/")
