--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -89,6 +89,15 @@ jobs:
           python3 -m pip install -r ${{ env.OPENVINO_REPO }}/src/frontends/paddle/tests/requirements.txt
 
       #
+      # Disable Telemetry
+      #
+
+      - name: Disable Telemetry
+        run: |
+          mkdir -p $HOME/intel/
+          echo 0 > $HOME/intel/openvino_telemetry
+
+      #
       # Build
       #
 
